room e2e tests
